# LangChain-with-Google-Api

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test.py
db/: chroma.sqlite3
routes/: chat.py  image.py  query.py  upload.py
services/: chat_agent.py  embedding.py  image_service.py  rag_pipleine.py
utils/: chunking.py  file_loader.py
